# funny_bot

./: .gitignore  Dockerfile  Makefile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  cron.yml
src/: .env.example  conftest.py  main.py  mypy.ini  pytest.ini  settings.py
src/anyday_holiday/: __init__.py  picture_descriptor.py
src/anyday_holiday/tests/: test_picture_description_generator.py
src/base/: __init__.py
src/bot/: __init__.py  client.py  help_text.py
src/bot/filters/: __init__.py  filters.py
src/bot/services/: __init__.py  ask_a_question_service.py  base_bot_service.py  make_picture_service.py  picture_of_the_day.py
src/bot/tests/: conftest.py  test_ask_question_service.py  test_base_bot_service.py  test_filters.py  test_make_picture_service.py  test_picture_of_the_day_service.py
src/clients/: __init__.py
src/clients/base/: base_client.py
src/clients/holiday/: client.py
src/clients/holiday/tests/: test_holiday_client.py
src/clients/open_ai/: client.py
src/clients/open_ai/tests/: test_open_ai_client.py
src/holiday/: client.py
src/holiday/tests/: test_holiday_client.py
src/open_ai/: __init__.py  client.py
src/open_ai/tests/: test_client.py  test_open_ai_client.py
